# Planets

./: .gitattributes  .gitignore  CMakeLists.txt  COPYRIGHT.txt  Configure.h.in  Planets.sln  README.md
InstallerData/: Description.txt
Planets/: Planets.vcxproj  Planets.vcxproj.filters
Planets/Benchmarks/: .gitignore
Planets/Source/: CMakeLists.txt  CustomException.cpp  CustomException.h  DynamicVariableGroup.h  DynamicVariableManager.h  Game.cpp  Game.h  Main.cpp
Planets/Source/Benchmark/: BenchmarkMacros.h  BenchmarkManager.h  CMakeLists.txt
Planets/Source/Benchmark/Data/: CMakeLists.txt
Planets/Source/CelestialBody/: CMakeLists.txt  CelestialBody.cpp  CelestialBody.h  CelestialBodyTextures.cpp  CelestialBodyTextures.h
Planets/Source/Console/: CMakeLists.txt
Planets/Source/DynamicVariableFiles/: AsteroidMoon.txt  Moon.txt  Planet.txt
Planets/Source/Iterator/: CMakeLists.txt
Planets/Source/Iterator/Container/: CMakeLists.txt  ContainerDebugInfo.h
Planets/Source/Mathematics/: CMakeLists.txt
Planets/Source/Mathematics/Matrix/: CMakeLists.txt  Matrix.h
Planets/Source/Mathematics/Vector/: CMakeLists.txt  Vector.h
Planets/Source/Mathematics/Vector/TightlyPacked/: CMakeLists.txt  TightlyPackedVector2.h  TightlyPackedVector3.h  TightlyPackedVector4.h
Planets/Source/Noise/: CMakeLists.txt  PermutationTable.h
Planets/Source/Rendering/: CMakeLists.txt  Texture.cpp  Texture.h
Planets/Source/Rendering/PostProcessing/: CMakeLists.txt  PostProcessingEffect.h  PostProcessor.cpp  PostProcessor.h
Planets/Source/Rendering/Vertex/: CMakeLists.txt  CelestialVertex.h  CelestialVertexGlsl.h  Vertex.h  VertexGlsl.h
Planets/Source/Shaders/: CelestialBodyGeneration.shader  MoonColour.shader  MoonTexture.shader  NoEffect.shader  OceanEffect.shader  Planet.shader
Planets/Source/Textures/: NormalInterpolation.raw  SurfaceTexture.raw
Planets/Source/Window/: CMakeLists.txt  Window.cpp
